[package]
name = "chunky"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1"
itertools = "0.13"
ndarray = "0.16"
noise = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }
bevy = { version = "0.14" }

[profile.dev.package."*"]
opt-level = 3
